# ai_testcase_generator

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  config.json.example  create-zip.bat  docker-compose.yml  pyproject.toml  run_app.py
ai_testcase_generator/: __init__.py  app.py
